Playing with colors

--- a/HTML/css/custom.css
+++ b/HTML/css/custom.css
@@ -36,3 +36,15 @@
 .black {
     color: black;
 }
+.darkgreen {
+    color: darkgreen;
+}
+.green {
+    color: green;
+}
+.yellowgreen {
+    color: yellowgreen;
+}
+.yellow {
+    color: yellow;
+}
